[gd_scene load_steps=13 format=2]

[ext_resource path="res://img/logo.png" type="Texture" id=1]
[ext_resource path="res://img/menubg.png" type="Texture" id=2]
[ext_resource path="res://font/KGHAPPYSolid.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://interface/def_theme.tres" type="Theme" id=4]
[ext_resource path="res://map/menu_main.gd" type="Script" id=5]
[ext_resource path="res://interface/opt_theme.tres" type="Theme" id=6]

[sub_resource type="DynamicFont" id=3]
size = 24
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.0980392, 0.0980392, 0.109804, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=7]
default_font = SubResource( 6 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 3 )

[node name="menu_main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="mainScr" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="mainBG" type="ColorRect" parent="mainScr"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0627451, 0.0588235, 0.0745098, 1 )

[node name="background" type="TextureRect" parent="mainScr"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )

[node name="RISElogo" type="TextureRect" parent="mainScr"]
margin_top = 2.0
margin_right = 1280.0
margin_bottom = 722.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="buttonContainer" type="VBoxContainer" parent="mainScr"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 149.0
margin_top = -540.0
margin_right = 473.0
mouse_default_cursor_shape = 6
theme = ExtResource( 4 )

[node name="playBtn" type="Button" parent="mainScr/buttonContainer"]
margin_right = 324.0
margin_bottom = 72.0
rect_min_size = Vector2( 0, 72 )
theme = ExtResource( 6 )
action_mode = 0
text = "Play"

[node name="optionsBtn" type="Button" parent="mainScr/buttonContainer"]
margin_top = 76.0
margin_right = 324.0
margin_bottom = 148.0
rect_min_size = Vector2( 0, 72 )
theme = ExtResource( 6 )
disabled = true
action_mode = 0
text = "Options"

[node name="exitBtn" type="Button" parent="mainScr/buttonContainer"]
margin_top = 152.0
margin_right = 324.0
margin_bottom = 224.0
rect_min_size = Vector2( 0, 72 )
theme = ExtResource( 6 )
action_mode = 0
text = "Exit"

[node name="changeLogs" type="RichTextLabel" parent="mainScr"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -780.0
margin_top = 214.0
margin_bottom = -218.0
theme = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "==== ver 0.1 (Dec 09 22 - ??) ====


+ added map blackmesa/lobby
+ fixed crouching issues
+ sloppily added weapon switching
	+ AK
	+ Glock
+ fixed player height
+ added crouching
	= still has issues
+ added sound effects
	+ footsteps
	+ gunfire
	+ fall impact
+ added particles
	+ surface impact particles
	+ blood particles
+ added bullet decals
+ added falling \"sway\"
+ added weapon sway
+ added fire animation
+ added player health
+ added fall damage
+ added map dev_testing
+ added map dm_arcade
+ added developer console
+ added discord integration
+ added map de_powerplant
+ added ui themes
+ added options submenus
+ added options menu
+ added play menu
+ added main menu"
text = "==== ver 0.1 (Dec 09 22 - ??) ====


+ added map blackmesa/lobby
+ fixed crouching issues
+ sloppily added weapon switching
	+ AK
	+ Glock
+ fixed player height
+ added crouching
	= still has issues
+ added sound effects
	+ footsteps
	+ gunfire
	+ fall impact
+ added particles
	+ surface impact particles
	+ blood particles
+ added bullet decals
+ added falling \"sway\"
+ added weapon sway
+ added fire animation
+ added player health
+ added fall damage
+ added map dev_testing
+ added map dm_arcade
+ added developer console
+ added discord integration
+ added map de_powerplant
+ added ui themes
+ added options submenus
+ added options menu
+ added play menu
+ added main menu"

[node name="CurrentVersion" type="RichTextLabel" parent="mainScr"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -351.0
margin_top = 24.0
margin_bottom = -953.0
theme = SubResource( 4 )
text = "Current Version:"

[node name="updateText" type="RichTextLabel" parent="mainScr"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -342.0
margin_top = 80.0
margin_right = -55.0
margin_bottom = -959.0
theme = SubResource( 4 )
custom_colors/default_color = Color( 0.6, 1, 0.541176, 1 )
text = "Update Available!"

[node name="updateBtn" type="Button" parent="mainScr"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -329.0
margin_top = 120.0
margin_right = -96.0
margin_bottom = 172.0
theme = ExtResource( 6 )
action_mode = 0
text = "Update"

[node name="playScr" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="tabBG" type="ColorRect" parent="playScr"]
anchor_right = 1.0
margin_bottom = 52.0
color = Color( 0.133333, 0.133333, 0.133333, 1 )

[node name="playBG" type="ColorRect" parent="playScr"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 52.0
color = Color( 0.0627451, 0.0588235, 0.0745098, 1 )

[node name="create&mapBG" type="Panel" parent="playScr"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -190.0
margin_top = -725.0
margin_right = 190.0
custom_styles/panel = SubResource( 8 )

[node name="playLabels" type="Control" parent="playScr"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -190.0
margin_top = -182.0
margin_right = 190.0

[node name="createLabel" type="Label" parent="playScr/playLabels"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -202.0
margin_top = -693.0
margin_right = 202.0
margin_bottom = -603.0
theme = SubResource( 7 )
text = "Create"
align = 1

[node name="topTabs" type="HBoxContainer" parent="playScr"]
anchor_right = 1.0
margin_bottom = 52.0
theme = ExtResource( 6 )
alignment = 1

[node name="pbackTab" type="Button" parent="playScr/topTabs"]
margin_left = 434.0
margin_right = 694.0
margin_bottom = 52.0
rect_min_size = Vector2( 260, 0 )
action_mode = 0
text = "Back"

[node name="createTab" type="Button" parent="playScr/topTabs"]
margin_left = 698.0
margin_right = 958.0
margin_bottom = 52.0
rect_min_size = Vector2( 260, 0 )
action_mode = 0
text = "Create"

[node name="serverTab" type="Button" parent="playScr/topTabs"]
margin_left = 962.0
margin_right = 1222.0
margin_bottom = 52.0
rect_min_size = Vector2( 260, 0 )
action_mode = 0
text = "Server List"

[node name="customizeTab" type="Button" parent="playScr/topTabs"]
margin_left = 1226.0
margin_right = 1486.0
margin_bottom = 52.0
rect_min_size = Vector2( 260, 0 )
action_mode = 0
text = "Customize"

[node name="createSub" type="VBoxContainer" parent="playScr"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -162.0
margin_top = -699.0
margin_right = 162.0
mouse_default_cursor_shape = 6
theme = ExtResource( 4 )

[node name="mapBtn" type="Button" parent="playScr/createSub"]
margin_right = 324.0
margin_bottom = 72.0
rect_min_size = Vector2( 0, 72 )
theme = ExtResource( 6 )
action_mode = 0
text = "Map"

[node name="startBtn" type="Button" parent="playScr/createSub"]
visible = false
margin_top = 76.0
margin_right = 324.0
margin_bottom = 148.0
rect_min_size = Vector2( 0, 72 )
theme = ExtResource( 6 )
action_mode = 0
text = "Start"

[node name="mapsSub" type="VBoxContainer" parent="playScr"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -162.0
margin_top = -699.0
margin_right = 162.0
mouse_default_cursor_shape = 6
theme = ExtResource( 4 )

[node name="arcadeBtn" type="Button" parent="playScr/mapsSub"]
margin_right = 324.0
margin_bottom = 72.0
rect_min_size = Vector2( 0, 72 )
theme = ExtResource( 6 )
action_mode = 0
text = "dm_arcade"

[node name="powerplantBtn" type="Button" parent="playScr/mapsSub"]
margin_top = 76.0
margin_right = 324.0
margin_bottom = 148.0
rect_min_size = Vector2( 0, 72 )
theme = ExtResource( 6 )
action_mode = 0
text = "de_powerplant"

[node name="devtestingBtn" type="Button" parent="playScr/mapsSub"]
margin_top = 152.0
margin_right = 324.0
margin_bottom = 224.0
rect_min_size = Vector2( 0, 72 )
theme = ExtResource( 6 )
action_mode = 0
text = "dev_testing"

[node name="optionsScr" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="tabBG" type="ColorRect" parent="optionsScr"]
anchor_right = 1.0
margin_bottom = 52.0
color = Color( 0.133333, 0.133333, 0.133333, 1 )

[node name="playBG" type="ColorRect" parent="optionsScr"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 52.0
color = Color( 0.0627451, 0.0588235, 0.0745098, 1 )

[node name="background2" type="TextureRect" parent="optionsScr"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )

[node name="topTabs" type="HBoxContainer" parent="optionsScr"]
anchor_right = 1.0
margin_bottom = 52.0
theme = ExtResource( 6 )
alignment = 1

[node name="obackTab" type="Button" parent="optionsScr/topTabs"]
margin_left = 434.0
margin_right = 694.0
margin_bottom = 52.0
rect_min_size = Vector2( 260, 0 )
action_mode = 0
text = "Back"

[node name="generalTab" type="Button" parent="optionsScr/topTabs"]
margin_left = 698.0
margin_right = 958.0
margin_bottom = 52.0
rect_min_size = Vector2( 260, 0 )
action_mode = 0
text = "General"

[node name="videoTab" type="Button" parent="optionsScr/topTabs"]
margin_left = 962.0
margin_right = 1222.0
margin_bottom = 52.0
rect_min_size = Vector2( 260, 0 )
action_mode = 0
text = "Video"

[node name="audioTab" type="Button" parent="optionsScr/topTabs"]
margin_left = 1226.0
margin_right = 1486.0
margin_bottom = 52.0
rect_min_size = Vector2( 260, 0 )
action_mode = 0
text = "Audio"

[node name="tabLabels" type="Control" parent="optionsScr"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -190.0
margin_top = 105.0
margin_right = 190.0
margin_bottom = 287.0

[node name="generalLabel" type="Label" parent="optionsScr/tabLabels"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -202.0
margin_top = 64.0
margin_right = 202.0
margin_bottom = 154.0
theme = SubResource( 7 )
text = "General"
align = 1

[node name="videoLabel" type="Label" parent="optionsScr/tabLabels"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -202.0
margin_top = 64.0
margin_right = 202.0
margin_bottom = 171.0
theme = SubResource( 7 )
text = "Video
"
align = 1

[node name="generalOptions" type="VBoxContainer" parent="optionsScr"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 149.0
margin_top = -542.0
margin_right = 473.0
mouse_default_cursor_shape = 6
theme = ExtResource( 4 )

[node name="exampleBtn" type="Button" parent="optionsScr/generalOptions"]
margin_right = 324.0
margin_bottom = 72.0
rect_min_size = Vector2( 0, 72 )
theme = ExtResource( 6 )
action_mode = 0
text = "Example"

[node name="OptionButton" type="OptionButton" parent="optionsScr/generalOptions"]
margin_top = 76.0
margin_right = 324.0
margin_bottom = 128.0
text = "option btn"
align = 1

[node name="CheckButton" type="CheckButton" parent="optionsScr/generalOptions"]
margin_top = 132.0
margin_right = 324.0
margin_bottom = 204.0
rect_min_size = Vector2( 0, 72 )
text = "check btn"
align = 1

[node name="CheckBox" type="CheckBox" parent="optionsScr/generalOptions"]
margin_top = 208.0
margin_right = 324.0
margin_bottom = 280.0
rect_min_size = Vector2( 0, 72 )
action_mode = 0
text = "checkbox"
align = 1

[node name="MenuButton" type="MenuButton" parent="optionsScr/generalOptions"]
margin_top = 284.0
margin_right = 324.0
margin_bottom = 336.0
text = "menu btn"

[node name="videoOptions" type="VBoxContainer" parent="optionsScr"]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 149.0
margin_top = -542.0
margin_right = 473.0
mouse_default_cursor_shape = 6
theme = ExtResource( 4 )

[node name="resolutionLabel" type="Label" parent="optionsScr/videoOptions"]
margin_right = 324.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 5 )
text = "Resolution"

[node name="resolutionBox" type="OptionButton" parent="optionsScr/videoOptions"]
margin_top = 30.0
margin_right = 324.0
margin_bottom = 82.0
rect_min_size = Vector2( 240, 0 )
text = "1920x1080"
align = 1

[node name="CheckButton" type="CheckButton" parent="optionsScr/videoOptions"]
margin_top = 86.0
margin_right = 324.0
margin_bottom = 158.0
rect_min_size = Vector2( 0, 72 )
text = "Fullscreen"
align = 1

[connection signal="pressed" from="mainScr/buttonContainer/playBtn" to="." method="playBtn_pressed"]
[connection signal="pressed" from="mainScr/buttonContainer/optionsBtn" to="." method="optionsBtn_pressed"]
[connection signal="pressed" from="mainScr/buttonContainer/exitBtn" to="." method="exitBtn_pressed"]
[connection signal="pressed" from="mainScr/updateBtn" to="." method="updateBtn_pressed"]
[connection signal="pressed" from="playScr/topTabs/pbackTab" to="." method="pbackTab_pressed"]
[connection signal="pressed" from="playScr/topTabs/createTab" to="." method="createTab_pressed"]
[connection signal="pressed" from="playScr/topTabs/serverTab" to="." method="serverTab_pressed"]
[connection signal="pressed" from="playScr/topTabs/customizeTab" to="." method="customizeTab_pressed"]
[connection signal="pressed" from="playScr/createSub/mapBtn" to="." method="mapBtn_pressed"]
[connection signal="pressed" from="playScr/mapsSub/arcadeBtn" to="." method="arcadeBtn_pressed"]
[connection signal="pressed" from="playScr/mapsSub/powerplantBtn" to="." method="powerplantBtn_pressed"]
[connection signal="pressed" from="playScr/mapsSub/devtestingBtn" to="." method="devtestingBtn_pressed"]
[connection signal="pressed" from="optionsScr/topTabs/obackTab" to="." method="obackTab_pressed"]
[connection signal="pressed" from="optionsScr/topTabs/generalTab" to="." method="generalTab_pressed"]
[connection signal="pressed" from="optionsScr/topTabs/videoTab" to="." method="videoTab_pressed"]
[connection signal="pressed" from="optionsScr/topTabs/audioTab" to="." method="audioTab_pressed"]
